# c-toolbox

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  sonar-project.properties
.github/workflows/: cmake.yml
config/: readme.txt  versioning.cmake
include/: accurateTimer.h  circularBuffer.h  crcUtils.h  miscUtils.h  quickSort.h  streamBuffer.h  timerManager.h
softwareTimer/: accurateTimer.c  accurateTimer.h  timerManager.c  timerManager.h
src/: CMakeLists.txt  accurateTimer.c  circularBuffer.c  crcUtils.c  miscUtils.c  streamBuffer.c  timerManager.c
src/softwareTimer/: accurateTimer.c  accurateTimer.h  timerManager.h
src/utils/: cToolboxVersion.h.in  circularBuffer.h  miscUtils.h  quickSort.h
test/: readme.txt
test/gtest/: CMakeLists.txt  gtest_circularBuffer.cpp  ut_accurateTimer.cpp  ut_circularBuffer.cpp  ut_miscUtils.cpp  ut_timerManager.cpp
tools/: readme.txt
utils/: circularBuffer.c  quickSort.c
